304251 - can not call EntityManager.merge on Entities with MapKeyColumn and ALCT Changes CollectionMapping and DirectCollectionMapping to delegate building the collectionchangeevent to the container policy reviewed by Tom Ware